@@ -368,3 +368,6 @@ Change list for PernMangband
 03/12/2001 (Jir)
 - hibernation/annoucement/auto-off for AFK-mode.
 - 't' won't disturb players' running (but still cannot start running).
+
+05/12/2001 (Jir)
+- Coloured cookie.
